# SimpleRayTracer

./: CMakeLists.txt  Makefile  README.txt  elements.cpp  elements.h  main.cpp
lib/: libAntTweakBar.dylib
